# symfile

./: .gitignore  BOOTSTRAP.md  pyproject.toml
app/: __main__.py  backup.py  main.py  sync.py
app/detect/: __init__.py  reg.py  thresholds.py  unreg.py
app/edgar/: bulk13f.py  fetch.py  index.py
app/edgar/parse/: form13f.py  form144.py  form4.py  reg.py  schedule13d.py
app/holdings/: build.py  form4.py  report.py  schedule13d.py
app/mds/: syms.py
app/mds/massive/: adv.py  cusips.py  refs.py  splits.py  tickers.py
app/parsers/: __init__.py  reg.py  reg_424b2.py  reg_424b3.py  reg_424b4.py  reg_424b5.py  reg_424b7.py  reg_deal.py  unreg.py
app/server/: cache.py  router.py  schemas.py
app/trades/: banks.py  blocks.py  form4_block.py  hist.py  review.py  table.py
app/util/: asyncio.py  dates.py  log.py  names.py
symfile/: __main__.py  backup.py  index.py  parse144.py  refs.py  sync.py  tickers.py
symfile/edgar/: bulk13f.py  fetch.py  index.py
symfile/edgar/parse/: reg.py  schedule13d.py
symfile/holdings/: aliases.py  build.py  form4.py  load.py  report.py  schedule13d.py
symfile/mds/: __init__.py  syms.py
symfile/mds/massive/: cusips.py  refs.py  session.py  tickers.py
symfile/trades/: hist.py
symfile/util/: log.py
tools/: build_reg_corpus.py  build_unreg_golden.py  compare_blocks_golden.py  compare_old_blocks.py  eval_reg_deals.py  eval_reg_parsers.py  eval_unreg_coverage.py  eval_unreg_deals.py  export_block_golden.py  holders.py  seed_goldens.py  trades.py
