[project]
name = "symfile"
version = "0.1.0"
description = "SEC filing tools"
requires-python = ">=3.13"
dependencies = [
    "massive",
    "polars>=1.39.3",
    "structlog>=25.5.0",
    "typer>=0.24.1",
]

[project.scripts]
symfile = "symfile.__main__:app"

[tool.ruff]
line-length = 70
[tool.ruff.format]
quote-style = "single"

[tool.basedpyright]
reportMissingImports = "error"
reportMissingTypeStubs = false
typeCheckingMode = "off"
